--- a/StormPC/StormPC/Strings/en-us/Resources.resw
+++ b/StormPC/StormPC/Strings/en-us/Resources.resw
@@ -89,7 +89,7 @@
     <value>Default</value>
   </data>
   <data name="Settings_About.Text" xml:space="preserve">
-    <value>About this application</value>
+    <value>About StormPC Inventory Management System</value>
   </data>
   <data name="Settings_AboutDescription.Text" xml:space="preserve">
     <value>TODO: Replace with your app description.</value>
@@ -98,6 +98,6 @@
     <value>Privacy Statement</value>
   </data>
   <data name="SettingsPage_PrivacyTermsLink.NavigateUri" xml:space="preserve">
-    <value>https://YourPrivacyUrlGoesHere/</value>
+    <value>https://github.com/CaoQuocViet/StormPC/blob/main/LICENSE</value>
   </data>
 </root>
