feat(localization): update resource strings for Vietnamese language support
- Translated various settings-related strings to Vietnamese for better localization.
- Updated the Privacy Statement link to include a reference to the GitHub license.
- Adjusted layout margin in SettingsPage for improved visual spacing.

--- a/StormPC/StormPC/Strings/en-us/Resources.resw
+++ b/StormPC/StormPC/Strings/en-us/Resources.resw
@@ -74,19 +74,19 @@
     <value>Blank1</value>
   </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
-    <value>Personalization</value>
+    <value>Cấu hình giao diện hệ thống</value>
   </data>
   <data name="Settings_Theme.Text" xml:space="preserve">
-    <value>Theme</value>
+    <value>Chế độ</value>
   </data>
   <data name="Settings_Theme_Light.Content" xml:space="preserve">
-    <value>Light</value>
+    <value>Sáng</value>
   </data>
   <data name="Settings_Theme_Dark.Content" xml:space="preserve">
-    <value>Dark</value>
+    <value>Tối</value>
   </data>
   <data name="Settings_Theme_Default.Content" xml:space="preserve">
-    <value>Default</value>
+    <value>Mặc định</value>
   </data>
   <data name="Settings_About.Text" xml:space="preserve">
     <value>About StormPC Inventory Management System</value>
@@ -95,7 +95,7 @@
     <value>TODO: Replace with your app description.</value>
   </data>
   <data name="SettingsPage_PrivacyTermsLink.Content" xml:space="preserve">
-    <value>Privacy Statement</value>
+    <value>Privacy Statement - github license</value>
   </data>
   <data name="SettingsPage_PrivacyTermsLink.NavigateUri" xml:space="preserve">
     <value>https://github.com/CaoQuocViet/StormPC/blob/main/LICENSE</value>
