--- a/StormPC/StormPC/Strings/en-us/Resources.resw
+++ b/StormPC/StormPC/Strings/en-us/Resources.resw
@@ -73,11 +73,14 @@
   <data name="Shell_Blank1.Content" xml:space="preserve">
     <value>Blank1</value>
   </data>
+  <data name="Settings_Title.Text" xml:space="preserve">
+    <value>Cài đặt hệ thống</value>
+  </data>
   <data name="Settings_Personalization.Text" xml:space="preserve">
-    <value>Cấu hình giao diện hệ thống</value>
+    <value>Cá nhân hóa</value>
   </data>
   <data name="Settings_Theme.Text" xml:space="preserve">
-    <value>Chế độ</value>
+    <value>Chế độ giao diện</value>
   </data>
   <data name="Settings_Theme_Light.Content" xml:space="preserve">
     <value>Sáng</value>
@@ -86,16 +89,19 @@
     <value>Tối</value>
   </data>
   <data name="Settings_Theme_Default.Content" xml:space="preserve">
-    <value>Mặc định</value>
+    <value>Mặc định hệ thống</value>
   </data>
   <data name="Settings_About.Text" xml:space="preserve">
-    <value>About StormPC Inventory Management System</value>
+    <value>Thông tin phần mềm</value>
   </data>
   <data name="Settings_AboutDescription.Text" xml:space="preserve">
-    <value>TODO: Replace with your app description.</value>
+    <value>StormPC là phần mềm quản lý cửa hàng máy tính chuyên nghiệp, giúp chủ cửa hàng dễ dàng theo dõi sản phẩm, đơn hàng và báo cáo doanh thu. Hệ thống được xây dựng với giao diện hiện đại, trực quan và thân thiện với người dùng.</value>
+  </data>
+  <data name="Settings_Features.Text" xml:space="preserve">
+    <value>Tính năng chính: Quản lý sản phẩm và kho hàng, Quản lý đơn hàng, Báo cáo doanh thu và tồn kho, Quản lý danh mục và thương hiệu, Hệ thống sao lưu và phục hồi dữ liệu.</value>
   </data>
   <data name="SettingsPage_PrivacyTermsLink.Content" xml:space="preserve">
-    <value>Privacy Statement - github license</value>
+    <value>Điều khoản sử dụng và giấy phép</value>
   </data>
   <data name="SettingsPage_PrivacyTermsLink.NavigateUri" xml:space="preserve">
     <value>https://github.com/CaoQuocViet/StormPC/blob/main/LICENSE</value>
